--- a/docs/01.技术积累/05.数据分析/0501.数据分析之道/数据分析师的职业成长之路：从取数工具到项目组织的三次跨越.md
+++ b/docs/01.技术积累/05.数据分析/0501.数据分析之道/数据分析师的职业成长之路：从取数工具到项目组织的三次跨越.md
@@ -2,6 +2,9 @@
 title: 数据分析师的职业成长之路：从取数工具到项目组织的三次跨越
 date: 2024-08-19 09:22:13
 permalink: /pages/202408190922/
+categories:
+  - 数据分析
+  - 数据分析之道
 ---
 
 	当我们谈论“数据分析师”这个职业时，许多人可能会首先想到的是高薪、技术感和未来前景。然而，成为数据分析师并非一蹴而就，它是一段充满挑战的旅程，需要不断的学习和成长。本文将详细探讨数据分析师职业发展中的三次重要跨越，以及在这些跨越中的关键要点。
