--- a/docs/01.技术积累/03.博客搭建/01.vuepress博客搭建教程.md
+++ b/docs/01.技术积累/03.博客搭建/01.vuepress博客搭建教程.md
@@ -1,7 +1,10 @@
 ---
-title: 三步上篮配置文档
+title: vuepress博客搭建教程
 date: 2022-07-18 17:10:13
 permalink: /pages/24768e/
+categories: 
+  - 技术积累
+  - 博客搭建
 ---
 
 配置文档
