--- a/docs/03.学习周刊/2425.学习周刊-2024年25周.md
+++ b/docs/03.学习周刊/2425.学习周刊-2024年25周.md
@@ -18,6 +18,12 @@ categories:
 ![](https://cdn.beekka.com/blogimg/asset/202408/bg2024081304.webp)
 
 内网穿透工具 frp 的跨平台桌面客户端。（[@forestxieCode](https://github.com/ruanyf/weekly/issues/4982) 投稿）
+
+---
+
+- 项目地址：[fastapi-admin(opens new window)](https://github.com/iimeta/fastapi-admin)
+- 项目说明：一站式 API 管理系统，将各类 LLM API 进行统一格式、统一规范、统一管理，使其在功能、性能和用户体验上达到极致。 管理端：
+
 # 2 优秀博客
 ---
 
@@ -30,6 +36,8 @@ categories:
 3、[老庄日记](https://mp.weixin.qq.com/s/2BsA-73BHngYxjPF1HYI2Q)
 每天分享个人思考感悟，读书笔记等
 
+4、[猴子数据分析](https://houzi.blog.csdn.net/?type=blog)
+分享数据分析相关知识，用知识改变命运，让家人过上体面的生活
 # 3 工具
 ---
 1、[TikTok Voice Generator](https://tiktokvoice.net/)
