--- a/docs/03.学习周刊/2424.学习周刊-2024年24周.md
+++ b/docs/03.学习周刊/2424.学习周刊-2024年24周.md
@@ -33,7 +33,8 @@ categories:
 （5）不回避所介绍的技术的代价和缺点。
 
 （6）不使用网络俚语、咒骂、讽刺和咆哮。
-
+2、[# TDEngine环境安装、配置及使用经验总结](https://blog.csdn.net/weixin_44462773/article/details/130999428)
+ TDengine是一款国产、开源、云原生的[时序数据库](https://so.csdn.net/so/search?q=%E6%97%B6%E5%BA%8F%E6%95%B0%E6%8D%AE%E5%BA%93&spm=1001.2101.3001.7020)（Time Series Database），专为物联网、工业互联网、金融、IT 运维监控等场景设计并优化，具有极强的弹性伸缩能力
 
 
 # 3 工具
