--- a/docs/03.学习周刊/2425.学习周刊-2024年25周.md
+++ b/docs/03.学习周刊/2425.学习周刊-2024年25周.md
@@ -38,7 +38,8 @@ categories:
 
 4、[猴子数据分析](https://houzi.blog.csdn.net/?type=blog)
 分享数据分析相关知识，用知识改变命运，让家人过上体面的生活
-5
+5、[莫叫石榴姐](https://blog.csdn.net/godlovedaniel?type=blog)
+数据开发与数据挖掘
 # 3 工具
 ---
 1、[TikTok Voice Generator](https://tiktokvoice.net/)
